# Akropolis-Version-Terminal

./: CMakeLists.txt  README.md  index.html  main.cpp  shell_minimal.html
inc/: Cite.h  Header.h  Hex.h  Jeu.h  Joueur.h  MenuTerminal.h  Partie.h  Pioche.h  ScoreStrategy.h  Serialization.h  Tuile.h  Validation.h  Vue.h  json.hpp
page/: Akropolis.js  Akropolis.wasm  index.html  style.css
src/: Cite.cpp  Console.cpp  Hex.cpp  Jeu.cpp  Joueur.cpp  MenuTerminal.cpp  Partie.cpp  Pioche.cpp  ScoreStrategy.cpp  Source.cpp  Tuile.cpp  Vue.cpp
